--- a/workshopCaGISUcGIS.qmd
+++ b/workshopCaGISUcGIS.qmd
@@ -83,7 +83,7 @@ world_mollweide <- st_transform(world, crs = '+proj=moll +lon_0=0 +x_0=0 +y_0=0 
 graticule <- st_graticule(world_mollweide, densify = 0.1) # may need adjustment for density
 
 # Load cities from a CSV file
-cities_csv <- read_csv("/Users/delmelle/UNC Charlotte Dropbox/Eric Delmelle/cagisEditor/2024-workshopCaGIS/coordinatesMembers.csv")  
+cities_csv <- read_csv("/Users/delmelle/UNC Charlotte Dropbox/Eric Delmelle/cagisEditor/2024-workshopCaGIS/cagis-ucgisJune2024/coordinatesMembers.csv")  
 
 # Assuming the CSV has columns 'city', 'lon', and 'lat' for the city names, longitudes, and latitudes
 # Convert the data frame to an 'sf' object
@@ -187,24 +187,19 @@ fig-align="center"}
 ## How do we make our research reproducible? - **FAIR**:
 ::: columns
 :::: {.column width="50%"}
+  - **Findable**
 
-- **Findable**
-  - Descriptive metadata and persistent identifier (DOI)
+  - **Accessible**
 
-- **Accessible**
-  - Code/data could be openly available OR access via authentication and if needed
+  - **Interoperable**
 
-- **Interoperable**
-  - Data needs to be integrated with other data and interoperate with applications or workflows (Open formats)
-
-- **Reusable**
-  - Documentation and license (Open license - e.g. Creative Commons)
+  - **Reusable**
 
 ::::
 :::: {.column width="50%"}
 
 ![[by Scriberia for The Turing Way community (CC-BY
-4.0)](https://zenodo.org/record/3678226/files/FAIRPrinciples.jpg?download=1)](https://zenodo.org/record/3678226/files/FAIRPrinciples.jpg?download=1){width="80%"
+4.0)](https://zenodo.org/record/3678226/files/FAIRPrinciples.jpg?download=1)](https://zenodo.org/record/3678226/files/FAIRPrinciples.jpg?download=1){width="50%"
 fig-align="center"}
 
 ::::
@@ -216,12 +211,9 @@ knitr::include_graphics("imgs/reproducibleResearch.png")
 ```
 
 ## Codes!
-
-  - Some journals & conferences ask you to submit code along with your paper
-  - Anyone (with a similar level of skills) should be able to do reproduce your research and benefit from it. 
-  - If you do analysis in ArcGIS Pro, you need ArcGIS Pro to recreate that analysis
-  - If you don't have ArcGIS Pro, what do you do?
-
+- Some journals & conferences ask you to submit code 
+- Anyone should be able to do reproduce your research and benefit from it. 
+- If you do analysis in ArcGIS Pro, you need ArcGIS Pro to recreate that analysis
 ```{r, echo=FALSE, out.width = '80%'}
 knitr::include_graphics("imgs/phdComic.png")
 ```
@@ -249,37 +241,37 @@ knitr::include_graphics("imgs/flowchartc.png")
 - Resolution must be 600 dpi.
 
 
-## Preparing maps (2/2
-- Multipart figures should be labelled a), b), c), etc. T
+## Preparing maps (2/2)
+- Multipart figures should be labelled a), b), c), etc. 
 - Do not embed captions within the figure
 - When exporting to EPS or TIFF, all fonts should be embedded
 - **Myriad Pro** (sans serif) font is used for figure captions 
 - All figures can be color (there is no additional charge for color)
 
-## Example (how to improve?) ($\frac{1}{2}$)
+## Example (how to improve?) (1/2)
 ```{r, echo=FALSE,  out.width = '80%'}
 knitr::include_graphics("imgs/mapsNotGreat.png")
 ```
 [Map Doctor](https://chatgpt.com/g/g-14WuzVoyJ-map-doctor)
 [Guide, Journal of Maps](https://files.taylorandfrancis.com/TJOM-suppmaterial-quick-guide.pdf)
 
-## Example (how to improve?) ($\frac{2}{2}$)
+## Example (how to improve?) (2/2)
 ```{r, echo=FALSE, out.width = '80%'}
 knitr::include_graphics("imgs/mapsCouldbeBetter.png")
 ```
 
 
-## Maps - example of effective design  ($\frac{1}{3}$)
+## Maps - example of effective design  (1/3)
 ```{r, echo=FALSE,  out.width = '80%'}
 knitr::include_graphics("imgs/MapsSimple.png")
 ```
 
-## Maps - example of effective design  ($\frac{2}{3}$)
+## Maps - example of effective design  (2/3)
 ```{r, echo=FALSE, out.width = '60%'}
 knitr::include_graphics("imgs/MapsSimpleC.png")
 ```
 
-## Maps - example of effective design  ($\frac{3}{3}$)
+## Maps - example of effective design  (3/3)
 ```{r, echo=FALSE,  out.width = '60%'}
 knitr::include_graphics("imgs/SimpleStraightoThePoint.png")
 ```
@@ -314,7 +306,7 @@ knitr::include_graphics("imgs/improveGraph.png")
 knitr::include_graphics("imgs/effectiveGraphsC.png")
 ```
 
-## Graphs: Test is your friend
+## Graphs: Text is your friend
 ```{r, echo=FALSE,  out.width = '80%'}
 knitr::include_graphics("imgs/effectiveGraphD.png")
 ```
